[package]
name = "solana-accounts-proxy"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
tokio = { version = "1.20.1", features = ["full"] }
