[package]
name = "solana-accounts-proxy"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-TritonOne"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
bs58 = "0.4.0"
hyper = { version = "0.14.20", features = ["full"] }
jsonrpsee = { version = "0.15.1", features = [
    "http-server",
    "macros",
    "jsonrpsee-core",
    "tracing",
] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = { version = "0.1.36", optional = true }
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
], optional = true }


[features]
log_with_tracing = ["dep:tracing", "dep:tracing-subscriber"]
