[package]
name = "solana-accounts-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
solana-accounts-proxy = { path = "../solana-accounts-proxy"}
tokio = { version = "1.21.2", features = ["full"] }
tracing = { version = "0.1.36", features = ["async-await"] }

