[package]
name    = "solana-accounts-proxy"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-TritonOne"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.63"
async-trait = "0.1.57"
base64 = "0.13.0"
bs58 = "0.4.0"
hex = "0.4.3"
hyper = { version = "0.14.20", features = ["full"] }
json = "0.12.4"
jsonrpsee = { version = "0.15.1", features = [
    "http-server",
    "macros",
    "jsonrpsee-core",
    "tracing",
] }
lazy_static = "1.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tokio-postgres = "0.7.7"
toml = "0.5.9"
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
zstd = "0.11.2"


[features]
default         = ["safe_debug"]
dangerous_debug = []
safe_debug      = []

[dev-dependencies]
minreq = { version = "2.6.0", features = ["https-rustls"] }
