[package]
name = "solana-accounts-proxy"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-TritonOne"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
base64 = "0.13.1"
bs58 = "0.4.0"
hex = "0.4.3"
hyper = { version = "0.14.20", features = ["full"] }
json = "0.12.4"
jsonrpsee = { version = "0.15.1", features = [
    "http-server",
    "macros",
    "jsonrpsee-core",
    "tracing",
    "server",
] }
lazy_static = "1.4.0"
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres_query = "0.3.3"
rayon = "1.5.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
solana-transaction-status = "1.14.7"
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["array-impls"] }
toml = "0.5.9"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
zstd = "0.11.2"
secrecy = { version = "0.7.0", features = ["serde"] }


[features]
dangerous_debug = []

[dev-dependencies]
minreq = { version = "2.6.0", features = ["https-rustls"] }
