[package]
name    = "account_proxy_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
bs58 = "0.4.0"
hex = "0.4.3"
nanorand = "0.7.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-async-std-rustls",
] }
solana-accounts-proxy = { path = "../../solana-accounts-proxy", default-features = false, features = [
    "dangerous_debug",
] }
tracing = { version = "0.1.36", features = ["async-await"] }
