[package]
name    = "testsuite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.1"
minreq    = { version = "2.6.0", features = ["https-rustls"] }
tabled    = "0.9.0"
tokio     = { version = "1.21.2", features = ["full"] }
