[package]
name    = "testsuite"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
license = "LicenseRef-TritonOne"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
minreq = { version = "2.6.0", features = ["https-rustls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
solana-accounts-proxy = { path = "../../solana-accounts-proxy", default-features = false, features = [
    "dangerous_debug",
] }
anyhow = "1.0.66"
blake3 = "1.3.1"
tracing = { version = "0.1.37", features = ["async-await"] }
json5 = "0.4.1"
toml = "0.5.9"
